vpccreation.yml
 Description: >
    this template deploys a VPC, with a pair of public and private subnets spread
    across two Availability Zones. It deploys an Internet Gateway, with a default
    route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ)
    and default routes for them in the private subnets.
 
 
 Parameters:
            
    EnvironmentName:
        Description: An environment name that will be prefixed to resources names
        Type: String
        
        
    VpcCIDR:
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String        
        Default: 10.192.0.0/16
        
    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Avalibility Zones
        Type: String
        Default: 10.192.0.0/24
        
    PublicSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the public subnet in the second avalibility zone
        Type: String
        Default: 10.192.1.0/24
        
    PrivateSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
        Type: String
        Default: 10.192.2.0/24
        
    PrivateSubnet2CIDR:
        Description: Please enter the IP range (CIDR notation) for the private subnet in the secind Avalibility Zone
        Type: String 
        Default: 10.192.3.0/24
   
 Resources:
        
        VPC: 
            Type: AWS::EC2::VPC
            Properties:
                 CidrBlock: !Ref VpcCIDR
                 EnableDnsHostnames: false
                 Tags:
                    - Key: Name
                      Value: !Ref EnvironmentName
                      
        InternetGateway:
            Type: AWS::EC2::InternetGateway
            Properties:
               Tags:
                  - Key: Name
                    Value: !Ref EnvironmentName
                    
        InternetGatewayAttachment:
            Type: AWS::EC2::VPCGatewayAttachment
            Properties:
                InternetGatewayId: !Ref InternetGateway
                VpcId: !Ref VPC
                
       
        PublicSubnet1:
            Type: AWS::EC2::Subnet
            Properties:
                VpcId: !Ref VPC
                AvailabilityZone: !Select [ 0, !GetAZs '' ]
                CidrBlock: !Ref PublicSubnet1CIDR
                MapPublicIpOnLaunch: true
                Tags:
                    - Key: Name
                      Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
    
        PublicSubnet2:
            Type: AWS::EC2::Subnet
            Properties:
                VpcId: !Ref VPC
                AvailabilityZone: !Select [ 0, !GetAZs '' ]
                CidrBlock: !Ref PublicSubnet2CIDR
                MapPublicIpOnLaunch: true
                Tags:
                   - Key: Name
                     Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
                     
        PrivateSubnet1: 
           Type: AWS::EC2::Subnet
           Properties:
               VpcId: !Ref VPC
               AvailabilityZone: !Select [ 0, !GetAZs '' ]
               CidrBlock: !Ref PrivateSubnet1CIDR
               MapPublicIpOnLaunch: false
               Tags: 
                   - Key: Name 
                     Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

        PrivateSubnet2: 
           Type: AWS::EC2::Subnet
           Properties:
               VpcId: !Ref VPC
               AvailabilityZone: !Select [ 1, !GetAZs '' ]
               CidrBlock: !Ref PrivateSubnet2CIDR
               MapPublicIpOnLaunch: false
               Tags: 
                    - Key: Name 
                      Value: !Sub ${EnvironmentName} Private Subnet (AZ2)           
                     
        NatGateway1EIP:
            Type: AWS::EC2::EIP
            DependsOn: InternetGatewayAttachment
            Properties:
                Domain: VPC
                
        NatGateway1:
            Type: AWS::EC2::NatGateway
            Properties:
                AllocationId: !GetAtt NatGateway1EIP.AllocationId
                SubnetId: !Ref PublicSubnet1
                
                
        PublicRouteTable:
            Type: AWS::EC2::RouteTable
            Properties: 
                VpcId: !Ref VPC
                Tags: 
                   - Key: Name 
                     Value: !Sub ${EnvironmentName} Public Routes
                     
                     
        DefaultPublicRoute: 
            Type: AWS::EC2::Route
            DependsOn: InternetGatewayAttachment
            Properties: 
                RouteTableId: !Ref PublicRouteTable
                DestinationCidrBlock: 0.0.0.0/0
                GatewayId: !Ref InternetGateway
        
        PublicSubnet1RouteTableAssociation:
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
                RouteTableId: !Ref PublicRouteTable
                SubnetId: !Ref PublicSubnet1
        
        PublicSubnet2RouteTableAssociation:
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
                RouteTableId: !Ref PublicRouteTable
                SubnetId: !Ref PublicSubnet2
    
         
        PrivateRouteTable1:
            Type: AWS::EC2::RouteTable
            Properties: 
                VpcId: !Ref VPC
                Tags: 
                    - Key: Name 
                      Value: !Sub ${EnvironmentName} Private Routes (AZ1)
    
        DefaultPrivateRoute1:
            Type: AWS::EC2::Route
            Properties:
               RouteTableId: !Ref PrivateRouteTable1
               DestinationCidrBlock: 0.0.0.0/0
               NatGatewayId: !Ref NatGateway1
               
        PrivateSubnet1RouteTableAssociation:
            Type: AWS::EC2::SubnetRouteTableAssociation
            Properties:
                RouteTableId: !Ref PrivateRouteTable1
                SubnetId: !Ref PrivateSubnet1   

        PrivateSubnet2RouteTableAssociation:
           Type: AWS::EC2::SubnetRouteTableAssociation
           Properties:
                RouteTableId: !Ref PrivateRouteTable1
                SubnetId: !Ref PrivateSubnet2                
                
 Outputs:
        VPC:
            Description: A reference to the created VPC
            Value: !Ref VPC

        PublicSubnets:
            Description: A list of the public subnets
            Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]

        PrivateSubnets:
            Description: A list of the private subnets
            Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]

        PublicSubnet1:
            Description: A reference to the public subnet in the 1st Availability Zone
            Value: !Ref PublicSubnet1

        PublicSubnet2: 
            Description: A reference to the public subnet in the 2nd Availability Zone
            Value: !Ref PublicSubnet2

        PrivateSubnet1:
            Description: A reference to the private subnet in the 1st Availability Zone
            Value: !Ref PrivateSubnet1

        PrivateSubnet2: 
            Description: A reference to the private subnet in the 2nd Availability Zone
            Value: !Ref PrivateSubnet2
